--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -48,5 +48,15 @@
                 </div>
             </div>
         </form>
+
+        <p> 
+	    এই <strong> web app</strong> টি ব্যবহার করা খুবই সহজ। এখানে আপনি লগ-ইন করে আপনার প্রোফাইল তৈরি করতে পারবেন , আপনি কিছু পোস্ট করলে আপনার followers
+	  সেগুলো দেখতে পারবে এবং আপনিও অন্যকে follow করতে পারবেন। প্রোফাইল পিকচার দেখতে হলে আপনার flickr account থাকতে হবে, ওই account এর PP ই হবে আপনার এই 
+	  account এর PP.  
+            
+
+        </p>
+
     </div>
+
 {% endblock %}
